Package: R.oo
=============

Version: 1.8.0 [2011-04-03]
o ROBUSTNESS: Now finalizers for Object:s are registered to be called 
  also when R is quit.  Previously, they were only executed when an 
  Object was cleaned up by the garbage collector.
o Turned of the default instantiation timestamp for Object and 
  BasicObject.  The main reason is that it makes it very complicated
  to calculate reproducible checksums.  However, for backward
  compatibility, it is possible to turn on the timestamp by setting
  option "R.oo::Object/instantiationTime".  For BasicObject there is
  option "R.oo::BasicObject/instantiationTime".
o Added protected getFieldModifiers() and getFieldModifier().
o Added argument 'recursive' to clearCache() for recursively traversing
  all elements are clearing the cache of all detected Object:s.
o Now clearCache() also calls clearLookupCache().
o Added protected clearLookupCache() for clearing internal objects 
  stored in the Object and that are used for faster field lookups.
o CLEANUP: Dropped deprecated getInstanciationTime().


Version: 1.7.5 [2011-02-01]
o ROBUSTNESS: Now using 'inherits' (not 'inherit') in all calls to
  get() and exists().


Version: 1.7.4 [2010-09-22]
o Now Rdoc lines are allowed to start with double ('##') or tripple
  ('###') comment characters in addition to single ('#') ones.


Version: 1.7.3 [2010-06-04]
o Now argument 'addTimestamp' of Rdoc$compile() defaults to FALSE.
  This way the generate Rd file will remain identical unless there
  are real Rdoc/code changes.  Not adding timestamps is better when
  working with a version control systems.
o BUG FIX: If there are no Rd files, then check() of Rdoc would
  throw the error "object 'res' not found".


Version: 1.7.2 [2010-04-13]
o BUG FIX: Package(pkg) would throw "Error in Package(pkgname) : object
  'package' not found", if 'pkg' is installed in multiple libraries.


Version: 1.7.1 [2010-03-17]
o CLEAN UP: Loading the package would generate warnings of